[project]
name = "blasphemy-killer"
version = "0.1.0"
description = "Scan video files for phrases that take the Lord's name in vain and mute them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "click>=8.1",
    "yt-dlp>=2025.1.1",
]

[project.scripts]
blasphemy-killer = "blasphemy_killer.cli:main"

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blasphemy_killer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
